<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_image_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/ic_image_icon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_facebook"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_image_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="3dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_image_facebook_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/register_text_2"
                android:textColor="@color/green_facebook" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/login_linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_facebook"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/login_text_1" />

        <View
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="#000000" />
    </LinearLayout>

    <EditText
        android:id="@+id/login_gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_linear_layout_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="13"
        android:fontFamily="sans-serif"
        android:hint="@string/login_text_2"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_gmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="13"
        android:fontFamily="sans-serif"
        android:hint="@string/login_text_3"
        android:inputType="textPassword" />


    <LinearLayout
        android:id="@+id/login_linear_layout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_alignStart="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/login_text_4"
            android:textColor="@color/pink" />

        <Button
            android:id="@+id/login_free_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/shape_button"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/login_text_5"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>